# seu_msc_lab_visual_servo

./: ReadMe.md  install.md
conveyor_belt_control/: CMakeLists.txt  ReadMe.md  package.xml
conveyor_belt_control/src/: belt_control_node.cpp
object_detector/: CMakeLists.txt  package.xml
object_detector/src/: object_detector.cpp
onrobot_gripper_control/: CMakeLists.txt  README.md  package.xml
onrobot_gripper_control/scripts/: gripper_control.py
simulink/: ur3_simulink_ros2_ibvs_mpc.slx  ur5_simulink_ros2_pbvs_aic.slxc
simulink/ur5_simulink_ros2_ibvs_mpc/: mpc_controller_init.m  ur5_simulink_ros2_ibvs_mpc.slx
simulink/ur5_simulink_ros2_ibvs_mpc_old/: all_init.m  ibvs_cstate.m  mpc_controller_init.m  ur5_simulink_ros2_ibvs_mpc_old.slx
simulink/ur5_simulink_ros2_pbvs_mpc/: AIC2.m  all_init.m  cal.m  ibvs_cstate.m  mpc_controller_init.m  mpc_init.m  ur3_simulink_ros2_ibvs_mpc.slx  ur5_model_init.m  ur5_simulink_ros2_pbvs_aic.slx  ur5_simulink_ros2_pbvs_aic.slx.original  ur5_simulink_ros2_pbvs_aic_faultInfo.xml  ur5_simulink_ros2_pbvs_all_methods_2023b.slx  ur5_simulink_ros2_pbvs_mpc.slx  ur5_simulink_ros2_pbvs_pid.slx  ur5_simulink_ros2_pbvs_pid.slx.original
simulink/ur5_simulink_ros2_pbvs_mpc/plot/: ee_pose_plot.m  error_plot.m  joint_vel_plot.m  matlab.mat
ur5_servo/: CMakeLists.txt  package.xml
ur5_servo/src/: joint_vel_sender.cpp
