<?xml version="1.0"?>
<package format="3">
  <name>conveyor_belt_control</name>
  <version>0.0.1</version>
  <description>Example motor controller using libserial and ROS 2</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <author email="your-email@example.com">Your Name</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>libserial</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>