<?xml version="1.0"?>
<package format="3">
  <name>onrobot_gripper_control</name>
  <version>0.0.1</version>
  <description>A ROS 2 package for controlling OnRobot grippers.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <author>Your Name</author>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- If the package has tests -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>