<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_servo</name>
  <version>0.1.0</version>
  <license>MIT</license>
  <description>Description of your package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- Add other dependencies if needed -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
